tests/ui/rfcs/rfc-2632-const-trait-impl/cross-crate.gatednc.stderr
error[E0015]: cannot call non-const fn `<cross_crate::NonConst as cross_crate::MyTrait>::func` in constant functions
  --> $DIR/cross-crate.rs:17:14
   |
LL |     NonConst.func();
   |              ^^^^^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants

error: aborting due to previous error

For more information about this error, try `rustc --explain E0015`.
